# be-it-forever

./: .cursorrules  .editorconfig  .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  DATABASE_DESIGN.md  PRODUCT.md  QUTE_IMPLEMENTATION_SUMMARY.md  QUTE_TEMPLATES.md  README.md  README_RUST.md  build.gradle.kts  docker-compose.yml  netlify.toml  package-lock 2.json  package-lock.json  package.json
.cursor/commands/: review-by-rules.md
.cursor/rules/: rules.mdc  testing.mdc
.github/workflows/: ci.yml
.husky/: pre-commit
__tests__/utils/: math.test.ts
certs/: cert.pem  key.pem
config/detekt/: README.md  detekt.yml  detekt.yml.1.x  detekt.yml.2.0-incomplete
db/: README.md
db/migrations/: 000_init.sql  001_add_performance_indexes.sql
docs/: ADR.md  ERD.md  PRD.md  auth-sequence-diagram.md  card-review-sequence-diagram.md  operator-import-sequence-diagram.md
docs/code-review/: 2025-12-25-codebase-review.md
docs/template-examples/: card-advanced.qute.html  card-back-detailed.qute.html  card-front-basic.qute.html  card-minimal.qute.html
migrations/: 001_initial_schema.sql
src/: api.rs  auth.rs  config.rs  db.rs  error.rs  main.rs  models.rs  proxy.ts  services.rs  sm2.rs
src/api/: auth.rs  change_requests.rs  mod.rs
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
src/lib/: constants.ts
src/services/: card_types.rs  change_requests.rs  knowledge.rs
supabase/: config.toml
supabase/migrations/: 20251213111647_remote_schema.sql  20251213120000_cleanup_redundant_indexes.sql  20251213123000_add_knowledge_rls.sql  (+17 more)
(+144 files in other folders)
